# g7-codex-project

./: .gitignore  README.md  app.py  pyproject.toml  tracer.py
.github/workflows/: ci.yml  deploy-vercel.yml
static/css/: base.css  flow-sidebar.css  layout.css  panels.css  splitter.css  styles.css  visuals.css
static/js/: app.js  controller.js
static/js/core/: api.js  browser_tracers.js  dom.js  state.js  utils.js
static/js/layout/: splitter.js
static/js/renderers/: code_panel.js  explanation_panel.js  flow_sidebar.js  visual_panel.js
templates/: index.html
tests/: test_native_tracer.py  test_runtime_locator.py  test_sorting_algorithms.py  test_tracer.py
visualizer/: __init__.py  app_factory.py  routes.py
visualizer/services/: __init__.py  execution_service.py  language_service.py  runtime_locator.py  trace_service.py  tracing_registry.py
visualizer/tracing/: __init__.py  code_analysis.py  csharp_tracer.py  javascript_tracer.py  native_precise.py  native_runtime.py  runtime.py  structure_detection.py
